--- a/auth.html
+++ b/auth.html
@@ -347,6 +347,12 @@
 <script src="assets/js/firebase-init.js"></script>
 
 <!-- Логіка реєстрації/входу (НЕ module!) -->
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
+
+<script src="assets/js/config.js"></script>
 <script src="assets/js/auth.js"></script>
 
 </body>
