--- a/auth.html
+++ b/auth.html
@@ -10,73 +10,31 @@
   <meta name="theme-color" content="#1a1a1a">
 
   <link rel="stylesheet" href="assets/css/main.css">
-  <script defer src="assets/js/config.js"></script>
 
   <style>
-    body.auth-page{
-      min-height:100vh;margin:0;
-      background:radial-gradient(circle at top,#111827 0,#020617 55%);
-      color:#e5e7eb;display:flex;flex-direction:column;
-    }
+    /* (ТУТ ТВОЇ СТИЛІ — БЕЗ ЗМІН) */
+    body.auth-page{min-height:100vh;margin:0;background:radial-gradient(circle at top,#111827 0,#020617 55%);color:#e5e7eb;display:flex;flex-direction:column;}
     .auth-main{flex:1;display:flex;align-items:center;justify-content:center;padding:70px 16px 40px;}
     .auth-shell{width:100%;max-width:980px;}
     .auth-header{margin-bottom:22px;text-align:left;}
-    .auth-kicker{
-      display:inline-flex;align-items:center;gap:8px;padding:4px 12px;border-radius:999px;
-      border:1px solid rgba(148,163,184,.5);background:rgba(15,23,42,.9);
-      font-size:.72rem;letter-spacing:.18em;text-transform:uppercase;color:#e5e7eb;margin-bottom:10px;
-    }
-    .auth-kicker-dot{
-      width:18px;height:18px;border-radius:999px;
-      background:linear-gradient(120deg,#facc15,#f97316,#dc2626);
-      box-shadow:0 0 10px rgba(250,204,21,.7);
-    }
-    .auth-title{
-      font-size:clamp(26px,4vw,34px);font-weight:900;text-transform:uppercase;
-      letter-spacing:.08em;margin:0 0 8px;
-      background:linear-gradient(90deg,#facc15 0%,#f97316 40%,#dc2626 100%);
-      -webkit-background-clip:text;background-clip:text;color:transparent;
-      text-shadow:0 1px 0 rgba(255,255,255,.2),0 4px 16px rgba(0,0,0,.9);
-    }
+    .auth-kicker{display:inline-flex;align-items:center;gap:8px;padding:4px 12px;border-radius:999px;border:1px solid rgba(148,163,184,.5);background:rgba(15,23,42,.9);font-size:.72rem;letter-spacing:.18em;text-transform:uppercase;color:#e5e7eb;margin-bottom:10px;}
+    .auth-kicker-dot{width:18px;height:18px;border-radius:999px;background:linear-gradient(120deg,#facc15,#f97316,#dc2626);box-shadow:0 0 10px rgba(250,204,21,.7);}
+    .auth-title{font-size:clamp(26px,4vw,34px);font-weight:900;text-transform:uppercase;letter-spacing:.08em;margin:0 0 8px;background:linear-gradient(90deg,#facc15 0%,#f97316 40%,#dc2626 100%);-webkit-background-clip:text;background-clip:text;color:transparent;text-shadow:0 1px 0 rgba(255,255,255,.2),0 4px 16px rgba(0,0,0,.9);}
     .auth-subtitle{margin:0;font-size:.95rem;color:#d1d5db;max-width:620px;}
-    .auth-card{
-      margin-top:20px;background:radial-gradient(circle at top,#111827 0,#020617 70%);
-      border-radius:22px;border:1px solid rgba(148,163,184,.45);
-      box-shadow:0 24px 60px rgba(0,0,0,.9);padding:18px 18px 20px;
-    }
-    .auth-tabs{
-      display:flex;gap:8px;border-radius:999px;background:rgba(15,23,42,.95);
-      padding:4px;margin-bottom:18px;
-    }
-    .auth-tab-btn{
-      flex:1;border:none;border-radius:999px;padding:8px 10px;font-size:.85rem;
-      font-weight:600;text-transform:uppercase;letter-spacing:.12em;
-      background:transparent;color:#9ca3af;cursor:pointer;
-    }
-    .auth-tab-btn--active{
-      background:linear-gradient(135deg,#facc15,#f97316);
-      color:#111827;box-shadow:0 0 15px rgba(250,204,21,.6);
-    }
-    .auth-layout{
-      display:grid;grid-template-columns:minmax(0,1.7fr) minmax(0,1.1fr);gap:18px;
-    }
+    .auth-card{margin-top:20px;background:radial-gradient(circle at top,#111827 0,#020617 70%);border-radius:22px;border:1px solid rgba(148,163,184,.45);box-shadow:0 24px 60px rgba(0,0,0,.9);padding:18px 18px 20px;}
+    .auth-tabs{display:flex;gap:8px;border-radius:999px;background:rgba(15,23,42,.95);padding:4px;margin-bottom:18px;}
+    .auth-tab-btn{flex:1;border:none;border-radius:999px;padding:8px 10px;font-size:.85rem;font-weight:600;text-transform:uppercase;letter-spacing:.12em;background:transparent;color:#9ca3af;cursor:pointer;}
+    .auth-tab-btn--active{background:linear-gradient(135deg,#facc15,#f97316);color:#111827;box-shadow:0 0 15px rgba(250,204,21,.6);}
+    .auth-layout{display:grid;grid-template-columns:minmax(0,1.7fr) minmax(0,1.1fr);gap:18px;}
     @media (max-width:900px){.auth-layout{grid-template-columns:1fr;}}
-    .auth-form-wrap{
-      background:rgba(15,23,42,.95);border-radius:16px;border:1px solid rgba(30,64,175,.7);
-      padding:16px 14px 16px;
-    }
-    .auth-form-title{
-      font-size:.95rem;text-transform:uppercase;letter-spacing:.16em;color:#9ca3af;margin:0 0 10px;
-    }
+    .auth-form-wrap{background:rgba(15,23,42,.95);border-radius:16px;border:1px solid rgba(30,64,175,.7);padding:16px 14px 16px;}
+    .auth-form-title{font-size:.95rem;text-transform:uppercase;letter-spacing:.16em;color:#9ca3af;margin:0 0 10px;}
     .auth-form-description{font-size:.85rem;color:#9ca3af;margin:0 0 12px;}
     .auth-fields{display:grid;grid-template-columns:1fr 1fr;gap:10px 12px;}
     @media (max-width:640px){.auth-main{padding-top:60px;}.auth-fields{grid-template-columns:1fr;}}
     .field{display:flex;flex-direction:column;gap:4px;font-size:.86rem;}
     .field label{font-weight:500;}
-    .input-auth{
-      background:#020617;border:1px solid #1f2937;border-radius:10px;
-      padding:9px 12px;font-size:.92rem;color:#e5e7eb;
-    }
+    .input-auth{background:#020617;border:1px solid #1f2937;border-radius:10px;padding:9px 12px;font-size:.92rem;color:#e5e7eb;}
     .input-auth::placeholder{color:#6b7280;}
     .input-auth:focus{outline:none;border-color:#facc15;box-shadow:0 0 8px rgba(250,204,21,.5);}
     .field-hint{font-size:.78rem;color:#6b7280;}
@@ -85,36 +43,19 @@
     .role-option input{accent-color:#facc15;transform:scale(1.2);}
     .single-column{grid-column:1 / -1;}
     .phone-wrap{display:flex;align-items:center;gap:6px;}
-    .phone-prefix{
-      padding:9px 10px;border-radius:10px;background:#020617;border:1px solid #1f2937;
-      font-size:.86rem;color:#e5e7eb;
-    }
+    .phone-prefix{padding:9px 10px;border-radius:10px;background:#020617;border:1px solid #1f2937;font-size:.86rem;color:#e5e7eb;}
     .auth-actions{margin-top:14px;display:flex;align-items:center;gap:10px;}
-    .btn-primary-auth{
-      border:none;border-radius:999px;padding:10px 20px;font-size:.95rem;
-      font-weight:600;background:linear-gradient(135deg,#facc15,#f97316);
-      color:#111827;cursor:pointer;box-shadow:0 0 16px rgba(250,204,21,.5);
-    }
+    .btn-primary-auth{border:none;border-radius:999px;padding:10px 20px;font-size:.95rem;font-weight:600;background:linear-gradient(135deg,#facc15,#f97316);color:#111827;cursor:pointer;box-shadow:0 0 16px rgba(250,204,21,.5);}
     .btn-primary-auth:disabled{opacity:.7;cursor:default;box-shadow:none;}
     .auth-msg{margin-top:8px;font-size:.85rem;font-weight:500;}
     .auth-msg.ok{color:#4ade80;}
     .auth-msg.err{color:#fca5a5;}
-    .auth-aside{
-      background:rgba(15,23,42,.95);border-radius:16px;border:1px solid rgba(148,163,184,.5);
-      padding:16px 14px 16px;font-size:.88rem;
-    }
+    .auth-aside{background:rgba(15,23,42,.95);border-radius:16px;border:1px solid rgba(148,163,184,.5);padding:16px 14px 16px;font-size:.88rem;}
     .auth-aside h3{margin:0 0 8px;font-size:.96rem;}
     .auth-aside ul{margin:8px 0 0;padding-left:18px;font-size:.85rem;color:#d1d5db;}
     .auth-aside li{margin-bottom:4px;}
-    .auth-badge{
-      display:inline-flex;align-items:center;gap:6px;padding:3px 9px;border-radius:999px;
-      border:1px solid rgba(52,211,153,.7);font-size:.72rem;text-transform:uppercase;
-      letter-spacing:.14em;color:#6ee7b7;margin-top:4px;
-    }
-    .auth-badge-dot{
-      width:7px;height:7px;border-radius:999px;background:#22c55e;
-      box-shadow:0 0 8px rgba(34,197,94,.9);
-    }
+    .auth-badge{display:inline-flex;align-items:center;gap:6px;padding:3px 9px;border-radius:999px;border:1px solid rgba(52,211,153,.7);font-size:.72rem;text-transform:uppercase;letter-spacing:.14em;color:#6ee7b7;margin-top:4px;}
+    .auth-badge-dot{width:7px;height:7px;border-radius:999px;background:#22c55e;box-shadow:0 0 8px rgba(34,197,94,.9);}
     .auth-tab-panel{display:none;}
     .auth-tab-panel.active{display:block;}
   </style>
@@ -294,7 +235,7 @@
 </footer>
 
 <script>
-  // Таби + роль + телефон (залишаємо)
+  // Таби + роль + телефон (твій код, без змін)
   document.addEventListener('DOMContentLoaded', () => {
     const tabButtons = document.querySelectorAll('.auth-tab-btn');
     const panels = {
@@ -337,23 +278,20 @@
   });
 </script>
 
-<!-- Firebase compat SDK -->
+<!-- Firebase compat SDK (ОДИН РАЗ) -->
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
 
-<!-- Єдина ініціалізація -->
+<!-- Єдина ініціалізація Firebase -->
 <script src="assets/js/firebase-init.js"></script>
 
-<!-- Логіка реєстрації/входу (НЕ module!) -->
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-storage-compat.js"></script>
-
+<!-- Загальні хелпери сайту (без Firebase init всередині!) -->
 <script src="assets/js/config.js"></script>
+
+<!-- Логіка реєстрації/входу -->
 <script src="assets/js/auth.js"></script>
 
 </body>
-  </html>
+        </html>
